--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/linkicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300;400;900&family=Open+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
